--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,11 @@ input[type="radio"] {
 	display: inline-block;
 }
 
+input.invalid {
+	border: 2px solid red;
+	transition: border-color .4s, background-color .4s;
+}
+
 button {
 	color: #fff;
 	padding: .55em 1.25em;
