Added validateSelectedJob(), validateJobRole(), validateSelectedDesign(), validateInput(), add/removeClassInvalid()
- Added validateSelectedJob() function which validates the option selected by the user using the drop-down
- Added validateJobRole() function which validates the input specified by the user if they choose "other" for the "job role" drop-down field.
- Added validateSelectedDesign() function which validates the design selected by the user and displays the appropriate options. There are BUGS.
- Added validateInput() which streamlines the validateName() and validateEmail() functions
- Added [add/remove]ClassInvalid() functions which further streamlines validateInput() and other functions()
- Added various event listeners
- Payment methods and colors drop-down are now hidden on page load
- Added 'Other' input field programtically on page load.

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,12 @@ input.invalid {
 	transition: border-color .4s, background-color .4s;
 }
 
+select.invalid {
+	border: 2px solid red;
+	transition: border-color .4s, background-color .4s;
+}
+
+
 button {
 	color: #fff;
 	padding: .55em 1.25em;
